[gd_scene load_steps=12 format=2]

[ext_resource path="res://Any_npc.gd" type="Script" id=1]
[ext_resource path="res://npc/sprites/girls_casual_clothes_2___sprite_mv_by_karmenis_de0ijyk.png" type="Texture" id=2]
[ext_resource path="res://Assets/fuentes/Pixeled.ttf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "npc_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "npc_horizontal_walk",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.0
height = 6.0

[sub_resource type="CircleShape2D" id=8]

[node name="npc_Any" type="Node2D"]

[node name="npc_Any" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="colision_frontal2" type="RayCast2D" parent="npc_Any"]
scale = Vector2( 0.3, 2 )
enabled = true
cast_to = Vector2( 190, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="npc_Any"]
frames = SubResource( 4 )
animation = "npc_idle"
playing = true

[node name="colision_frontal" type="RayCast2D" parent="npc_Any"]
scale = Vector2( 0.3, 2 )
enabled = true
cast_to = Vector2( -190, 0 )

[node name="Label" type="Label" parent="npc_Any"]
margin_left = -16.0
margin_top = -36.0
margin_right = 20.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 6 )
text = "30pts"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="npc_Any"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc_Any/Area2D"]
position = Vector2( -9, 2 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc_Any"]
position = Vector2( -1, 15 )
shape = SubResource( 8 )

[connection signal="body_entered" from="npc_Any/Area2D" to="npc_Any" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="npc_Any/Area2D" to="npc_Any" method="_on_Area2D_body_exited"]
